--- a/src/index.css
+++ b/src/index.css
@@ -130,7 +130,19 @@ body {
   border-radius: 4px;
   border: 1px solid transparent;
   background-clip: content-box;
+}
 
-  min-height: 10px; /* 너무 짧아지지 않게 최소 길이 설정 */
-  max-height: 30px; /* 스크롤 thumb 길이 제한 */
+.custom-scrollbar-bus::-webkit-scrollbar {
+  width: 4px; /* 폭 */
+}
+
+.custom-scrollbar-bus::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.custom-scrollbar-bus::-webkit-scrollbar-thumb {
+  background-color: #6937b9;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  background-clip: content-box;
 }
